# bsharp

./: Cargo.toml  LICENSE  README.md
example_games/: immortal_game.pgn
src/: cli.rs  main.rs
