[package]
name = "bsharp"
authors = ["Benjamin Coons <bcoons@radioraccoon.com>"]
version = "0.1.0"
edition = "2021"
publish = false
description = """
bsharp is a chess analysis tool that makes use of audio to provide a unique way
of analyzing chess matches.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgn-reader = "*"
shakmaty = "*"
anyhow = "1"
clap = { version = "4.0.0", features = ["derive"] }

[profile.dev]
opt-level = 1
